removing bad code smells